# mmagedit

./: .gitignore  LICENSE  README.md  appveyor.yml  bitstream.py  constants.py  ips.py  mappermages.py  mmagedit.py  mmdata.py  mmedit.py  mmgui.py  mmimage.py  util.py
.github/workflows/: build.yml
examples/: french.txt  tamanos.ips  tamanos.txt
libmmagedit/: .gitignore  any.h  api.inc  apigen.sh  build.sh  defer.h  mmagedit  mmagedit.cpp  mmagedit.h  py.h  test.py
mmedit/: bitstream.py  constants.py  mmdata.py
nesm/: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_install.cmake
nesm/src/: icon.c  main.c
nesm/src/emu/: emu6502.h  emu6502_opcodes.h  nes_apu.h  nes_cartridge.h  nes_mapper.h  nes_ppu.h  nes_rom.h  nes_system.c  nes_system.h
objects/: cfg_hp.py  obj_0E.py
src/: asm6502.py  bitstream.py  bps.py  constants.py  emulaunch.py  json_schema.txt  jsonpath.py  mappermages.py  mmdata.py  mmgui.py  mmimage.py  util.py
src/asm/: .gitignore  build.sh  defs.asm  ips-to-python.py  mappermages.asm  notes.txt  patch.asm  pre.asm
src/asmpy/: patches_diacritics.py  patches_extended_objects.py  patches_no_auto_scroll.py  patches_no_bouncy_landings.py  patches_unitile.py
src/objects/: cfg_bbox.py  cfg_flags.py  cfg_hp.py  cfg_points.py  obj_0E.py  obj_shot.py
